--- a/apps/split-window/tsconfig.app.json
+++ b/apps/split-window/tsconfig.app.json
@@ -7,5 +7,12 @@
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"],
-  "exclude": ["**/*.test.ts", "**/*.spec.ts"]
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/*.stories.ts",
+    "**/*.stories.js",
+    "**/*.stories.ts",
+    "**/*.stories.js"
+  ]
 }
