--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "strict": true,
+    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
     "paths": {
       "@repo20220121/api-interfaces": ["libs/api-interfaces/src/index.ts"]
     }
