--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@ngxs-labs/select-snapshot": "^3.0.0",
+    "@ngxs/store": "^3.7.3",
     "@nrwl/angular": "13.4.6",
+    "@storybook/addon-links": "^6.4.14",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -50,10 +53,13 @@
     "@nrwl/storybook": "13.4.6",
     "@nrwl/tao": "13.4.6",
     "@nrwl/workspace": "13.4.6",
+    "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/addon-interactions": "^6.4.14",
     "@storybook/angular": "~6.4.12",
     "@storybook/builder-webpack5": "~6.4.12",
     "@storybook/manager-webpack5": "~6.4.12",
+    "@storybook/testing-library": "^0.0.8",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
