--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "~6.4.12",
     "@storybook/addon-interactions": "^6.4.14",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/angular": "~6.4.12",
     "@storybook/builder-webpack5": "~6.4.12",
     "@storybook/manager-webpack5": "~6.4.12",
