--- a/apps/split-window/project.json
+++ b/apps/split-window/project.json
@@ -6,9 +6,7 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/split-window",
         "index": "apps/split-window/src/index.html",
@@ -23,7 +21,8 @@
           "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
           "apps/split-window/src/styles.css"
         ],
-        "scripts": []
+        "scripts": [],
+        "webWorkerTsConfig": "apps/split-window/tsconfig.worker.json"
       },
       "configurations": {
         "production": {
@@ -90,12 +89,11 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/split-window"
-      ],
+      "outputs": ["coverage/apps/split-window"],
       "options": {
         "jestConfig": "apps/split-window/jest.config.js",
-        "passWithNoTests": true
+        "passWithNoTests": true,
+        "webWorkerTsConfig": "apps/split-window/tsconfig.worker.json"
       }
     },
     "storybook": {
@@ -116,9 +114,7 @@
     },
     "build-storybook": {
       "executor": "@nrwl/storybook:build",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "uiFramework": "@storybook/angular",
         "outputPath": "dist/storybook/split-window",
