--- a/package.json
+++ b/package.json
@@ -11,48 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.1.3",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^13.1.3",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
+    "@angular/animations": "13.2.0",
+    "@angular/cdk": "13.2.0",
+    "@angular/common": "13.2.0",
+    "@angular/compiler": "13.2.0",
+    "@angular/core": "13.2.0",
+    "@angular/forms": "13.2.0",
+    "@angular/material": "13.2.0",
+    "@angular/platform-browser": "13.2.0",
+    "@angular/platform-browser-dynamic": "13.2.0",
+    "@angular/router": "13.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@ngxs-labs/select-snapshot": "^3.0.0",
     "@ngxs/store": "^3.7.3",
-    "@nrwl/angular": "13.4.6",
+    "@nrwl/angular": "13.7.1",
     "@storybook/addon-links": "^6.4.14",
+    "axios": "^0.25.0",
+    "observable-webworker": "^3.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.0",
+    "@angular-devkit/build-angular": "13.2.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
+    "@angular/cli": "13.2.1",
+    "@angular/compiler-cli": "13.2.0",
+    "@angular/language-service": "13.2.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.4.6",
-    "@nrwl/cypress": "13.4.6",
-    "@nrwl/eslint-plugin-nx": "13.4.6",
-    "@nrwl/jest": "13.4.6",
-    "@nrwl/linter": "13.4.6",
-    "@nrwl/nest": "13.4.6",
-    "@nrwl/node": "13.4.6",
-    "@nrwl/storybook": "13.4.6",
-    "@nrwl/tao": "13.4.6",
-    "@nrwl/workspace": "13.4.6",
+    "@nrwl/cli": "13.7.1",
+    "@nrwl/cypress": "13.7.1",
+    "@nrwl/eslint-plugin-nx": "13.7.1",
+    "@nrwl/jest": "13.7.1",
+    "@nrwl/linter": "13.7.1",
+    "@nrwl/nest": "13.7.1",
+    "@nrwl/node": "13.7.1",
+    "@nrwl/storybook": "13.7.1",
+    "@nrwl/tao": "13.7.1",
+    "@nrwl/workspace": "13.7.1",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "~6.4.12",
     "@storybook/addon-interactions": "^6.4.14",
@@ -63,19 +65,20 @@
     "@storybook/testing-library": "^0.0.8",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "autoprefixer": "^10.4.0",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "postcss": "^8.4.5",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "tailwindcss": "^3.0.2",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "typescript": "4.5.5"
   }
 }
+
