refac: add carousel-main-display.component.stories.ts

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@ngxs-labs/select-snapshot": "^3.0.0",
     "@ngxs/store": "^3.7.3",
     "@nrwl/angular": "13.7.1",
-    "@storybook/addon-links": "^6.4.14",
     "axios": "^0.25.0",
     "observable-webworker": "^3.4.0",
     "reflect-metadata": "^0.1.13",
@@ -55,9 +54,11 @@
     "@nrwl/storybook": "13.7.1",
     "@nrwl/tao": "13.7.1",
     "@nrwl/workspace": "13.7.1",
+    "@storybook/addon-links": "^6.4.14",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "~6.4.12",
     "@storybook/addon-interactions": "^6.4.14",
+    "@storybook/addon-notes": "^5.3.21",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/angular": "~6.4.12",
     "@storybook/builder-webpack5": "~6.4.12",
